--- a/custom_components/goecharger/translations/en.json
+++ b/custom_components/goecharger/translations/en.json
@@ -7,7 +7,7 @@
 			          "description": "If you need help with the configuration have a look here: https://github.com/cathiele/homeassistant-goecharger",
                 "data": {
                     "host": "Hostname or IP-Address in the local network",
-                    "name": "uniq name of the charger",
+                    "name": "unique name of the charger",
                     "scan_interval": "Pollinterval in seconds",
                     "correction_factor": "correction Factor for incorrect Voltage measurement"
                 }
